--- a/principal-vhquiz.html
+++ b/principal-vhquiz.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menu de Navegação</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>vhQuiz</title>
+  <link rel="stylesheet" href="principal-vhquiz.css">
 </head>
 <body>
 
 <header>
   <nav>
     <ul>
-      <li><a href="#" onclick="loadPage('home')">Gestão fiscal</a></li>
-      <li><a href="#" onclick="loadPage('sobre')">Gestão financeira</a></li>
-      <li><a href="#" onclick="loadPage('contato')">Gestão de vendas</a></li>
-      <li><a href="#" onclick="loadPage('contato')">Conta Integrada</a></li>
-      <li><a href="#" onclick="loadPage('contato')">Expansão</a></li>
-      <li><a href="#" onclick="loadPage('contato')"></a>BackOffice</li>
+      <li><a href="#" onclick="loadPage('leg')">Gestão fiscal</a></li>
+      <li><a href="#" onclick="loadPage('fin')">Gestão financeira</a></li>
+      <li><a href="#" onclick="loadPage('gdv')">Gestão de vendas</a></li>
+      <li><a href="#" onclick="loadPage('vhc')">Conta Integrada</a></li>
+      <li><a href="#" onclick="loadPage('exp')">Expansão</a></li>
+      <li><a href="#" onclick="loadPage('bo')"></a>BackOffice</li>
     </ul>
   </nav>
 </header>
