Alteração na estrutura do projeto - Remoção do ambiente local

--- a/leg.html
+++ b/leg.html
@@ -6,7 +6,7 @@
     <title>vhQuiz</title>
     <link rel="stylesheet" href="css/cabeçalho.css">
     <link rel="stylesheet" href="css/rodape.css">
-    <link rel="stylesheet" href="css/leg.css">
+    <link rel="stylesheet" href="css/perguntas.css">
     <link rel="shortcuticon" href ="img/favicon.png" type="image">
     <div id="header-placeholder"></div>
 </head>
