--- a/bemvindo.html
+++ b/bemvindo.html
@@ -6,21 +6,24 @@
     <title>vhQuiz</title>
     <link rel="stylesheet" href="css/cabeçalho.css">
     <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="css/home-sug.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div id="header-placeholder"></div>
 
-    <main>
+    <main class="main">
         <div class="banner">
-            <div class="cycle-slideshow"
-                data-cycle-fx="scrollHorz"
-                data-cycle-pause-on-hover="true"
-                data-cycle-speed="400"
-                data-cycle-loader="true">
-                <img src="img/banner.png" alt="Banner 1">
-                <img src="img/bannerz.png" alt="Banner 2">
-                <img src="img/bannerp.png" alt="Banner 3">
+            <div class="cycle-slideshow-container">
+                <div class="cycle-slideshow"
+                    data-cycle-fx="scrollHorz"
+                    data-cycle-pause-on-hover="true"
+                    data-cycle-speed="400"
+                    data-cycle-loader="true">
+                    <img src="img/banner.png" alt="Banner 1">
+                    <img src="img/bannerz.png" alt="Banner 2">
+                    <img src="img/bannerp.png" alt="Banner 3">
+                </div>
             </div>
         </div>
     </main>
@@ -32,9 +35,7 @@
     <script src="js/carregarconteúdo.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-
             loadContent('header-placeholder', 'includes/cabeçalho.html');
-
             loadContent('footer-placeholder', 'includes/rodape.html');
         });
     </script>
